<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2012-2013 Trento RISE
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
         http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either   express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>

    <string name="empty">No data.</string>
    <string name="empty_messages">No messages.</string>
    <string name="add">Add</string>
    <string name="app_name">INbox</string>

    <string-array name="fragment_array">
        <item>INbox</item>
        <item>Starred</item>
        <item>Subscriptions</item>
        <item>Manage Labels</item>
        <item>Search</item>
        <item>Settings</item>
        <item>Tutorial</item>
    </string-array>

    <string name="mainmenu_home">Home</string>
    <string name="mainmenu_inbox">INbox</string>
    <string name="mainmenu_starred">Starred</string>
    <string name="mainmenu_labels">Manage Labels</string>
    <string name="mainmenu_channels">SmartCampus Channels</string>
    <string name="mainmenu_feeds">External Subscriptions</string>
    <string name="mainmenu_search">Search</string>
    <string name="feed">Subscription</string>
    <string name="new_feed">New subscription</string>
    <string name="new_channel">New channel</string>
    <string name="edit_feed">Edit subscription: %s</string>
    <string name="edit_channel">Edit channel: %s</string>
    <string name="feeds">Subscriptions</string>
    <string name="channel">Channel</string>
    <string name="channels">Channels</string>
    <string name="title_inbox">INbox</string>
    <string name="title_starred">Starred</string>
    <string name="title_labels">Manage Labels</string>
    <string name="title_search">Search</string>
    <string name="title_channels">Manage Channels</string>
    <string name="title_feeds">Manage Subscriptions</string>
    <string name="app_failure_security">Failed to retrieve authentication data</string>
    <string name="app_failure_setup">Failed to initialize appplication</string>
    <string name="app_failure_operation">OOPS! An error occurred. Please check your connection or try again later.</string>
    <string name="app_uid_label">SmartCampus</string>
    <string name="notice_options_header">Notification options</string>
    <string name="label_options_header">Label options</string>
    <string name="channel_options_header">Channel options</string>
    <string name="feed_options_header">Subscription options</string>
    <string name="notice_option_view">View</string>
    <string name="notice_option_toggle_read">Toggle read status</string>
    <string name="notice_option_toggle_starred">Toggle star</string>
    <string name="notice_option_remove">Remove</string>
    <string name="notice_option_assign_labels">Assign label</string>
    <string name="notice_option_view_channel">View all from the same channel</string>
    <string name="btn_new_label">New label</string>
    <string name="add_label_dialog_name_hint">Label name</string>
    <string name="label_name_duplicate">A label with this name already exists</string>
    <string name="label_name_empty">Label name cannot be empty</string>
    <string name="add_label_dialog_title">New label</string>
    <string name="noticelist_menu_mark_all_read">Mark all as read</string>
    <string name="noticelist_menu_delete_all">Delete all</string>
    <string name="noticelist_menu_order_arrival">Order by arrival</string>
    <string name="noticelist_menu_order_rel_now">Order by relevance now</string>
    <string name="noticelist_menu_order_rel_place">Order by relevance here</string>
    <string name="noticelist_menu_order_priority">Order by priority</string>
    <string name="noticelist_menu_order_title">Order by title</string>
    <string name="label_option_view">View</string>
    <string name="label_option_edit">Edit</string>
    <string name="label_option_remove">Remove</string>
    <string name="label_remove_text">Are you sure you want to remove this label?</string>
    <string name="channel_remove_text">Are you sure you want to remove this channel?</string>
    <string name="feed_remove_text">Are you sure you want to remove this subscription?</string>
    <string name="channel_remove">Remove</string>
    <string name="channel_option_view">View</string>
    <string name="channel_option_edit">Edit</string>
    <string name="channel_option_remove">Remove</string>
    <string name="channel_source">Source</string>
    <string name="channel_name">Title</string>
    <string name="channel_filters">Filters</string>
    <string name="channel_add">Add</string>
    <string name="channel_filters_hint">Choose how to filter your messages</string>
    <string name="channel_labels">Labels</string>
    <string name="channel_labels_hint">Choose how to label your messages</string>
    <string name="channel_destinations">Destinations</string>
    <string name="channel_add_labels_dlg_title">Select labels</string>
    <string name="channels_help">Help</string>
    <string name="channel_destinations_trash">Trash</string>
    <string name="channel_destinations_timemanager">Time manager</string>
    <string name="channel_keywords">Keywords</string>
    <string name="channel_keywords_hint">Space-separated list of keywords</string>
    <string name="channel_name_empty">Title should not be empty</string>
    <string name="services_filter_keywords">Keywords</string>
    <string name="services_filter_keywords_hint">Space-separated list of keywords</string>
    <string name="services_filter_sources">Sources:</string>
    <string name="jp_filter_type">Notification type:</string>
    <string name="jp_filter_source">Notification source:</string>
    <string name="notification_title">New communication: </string>
    <string name="notification_text">New communication: </string>
    <string name="notification_title_multi"> new communications.</string>
    <string name="notification_text_multi"> new communications.</string>
    <string name="email_hint">Email address</string>
    <string name="pref_sync">Message synchronization</string>
    <string name="pref_sync_summ">Synchronize messages automatically</string>
    <string name="pref_sync_summ_manual">Synchronize messages manually</string>
    <string name="pref_sync_period">Synchronization period</string>
    <string name="pref_sync_period_summ">Synchronize every 5 minutes</string>
    <string name="pref_sync_period_title">Specify period in minutes</string>
    <string name="pref_messages">Message limit</string>
    <string name="pref_messages_summ">Up to 1000 messages stored</string>
    <string name="pref_messages_title">Specify message limit</string>
    <string name="pref_email">Default e-mail</string>
    <string name="pref_email_summ">None</string>
    <string name="pref_email_title">Specify default e-mail address</string>
    <string name="mainmenu_settings">Settings</string>
    <string name="email_format">Incorrect email format</string>
    <string name="help_msg_showagain">Don\'t show this again</string>
    <string name="synchronizeevery">Synchronize every</string>
    <string name="minutes">minutes</string>
    <string name="up_to">Up to</string>
    <string name="messages_stored">messages stored</string>
    <string name="help_feeds">
<![CDATA[
        You can subscribe to external sources of information so that their messages will be sent also to you, as in a mailing list or an RSS feed. In this section, you can define a new subscription by specifying:
        <ul>
        <li>where the messages come from (e.g. University services: Opera, Unisport, your department...)</li>
        <li>how you want to filter the messages(e.g. by selecting only those containing a given keyword)</li>
        <li>if and how you want to label the messages</li>
        <li>where the messages should be delivered (in you inbox, in the dedicated channel section, to your email...)</li>
        </ul>
    ]]>
    </string>
    <string name="help_channels">
<![CDATA[
        Channels route the messages coming from the SmartCampus apps, and in general all messages that are explicitly targeted to you. In this section you can define a new channel by specifying:
        <ul>
        <li>where the messages come from (one of the SmartCampus apps)</li>
        <li>how you want to filter the messages(e.g. by selecting only those containing a given keyword)</li>
        <li>if and how you want to label the messages</li>
        <li>where the messages should be delivered (in you inbox, in the dedicated channel section, to your email...)</li>
        </ul>
        ]]>
    </string>
    <string name="notifications_unread">Unread notifications</string>
    <string name="notifications_list_empty_jp">You have not received any notifications yet.</string>
    <string name="notifications_itinerary_delay_title">Delay for \"%s\" journey</string>
    <string name="notifications_itinerary_delay_min">%s minute</string>
    <string name="notifications_itinerary_delay_mins">%s minutes</string>
    <string name="notifications_itinerary_delay_bus">Line %1$s for %2$s</string>
    <string name="notifications_itinerary_delay_train">Train %1$s for %2$s</string>
    <string name="notifications_itinerary_delay_original_schedule">scheduled at %1$s at %2$s</string>
    <string name="notifications_itinerary_on_time">On time</string>
    <string name="notifications_event_new">New event \"%1$s\" at %2$s</string>
    <string name="notifications_story_new">New story \"%1$s\" about %2$s</string>
    <string name="notifications_event_updated">Event \"%s\" updated</string>
    <string name="notifications_location_updated">Place \"%s\" updated</string>
    <string name="notifications_story_updated">Story \"%s\" updated</string>
    <string name="notifications_event_at_place_updated">Event \"%1$s\" at %2$s is updated</string>
    <string name="notifications_story_at_place_update">Story \"%1$s\" about %2$s is updated</string>
    <string name="token_required">Please login before proceeding with the application.</string>
    <string name="token_expired">App login expired.</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="all_labels">All labels</string>
    
</resources>