<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    
    <CheckBoxPreference
        android:key="pref_sync"
        android:title="@string/pref_sync"
        android:summary="@string/pref_sync_summ"
        android:defaultValue="true" />
    
    <EditTextPreference
        android:key="pref_sync_period"
        android:title="@string/pref_sync_period"
        android:summary="@string/pref_sync_period_summ"
        android:dialogTitle="@string/pref_sync_period_title" 
        android:numeric="integer"
        android:maxLength="4"
        android:dependency="pref_sync"/>

    <EditTextPreference
        android:key="pref_messages"
        android:title="@string/pref_messages"
        android:summary="@string/pref_messages_summ"
        android:numeric="integer"
        android:maxLength="4"
        android:dialogTitle="@string/pref_messages_title" />

    <EditTextPreference
        android:key="pref_email"
        android:title="@string/pref_email"
        android:summary="@string/pref_email_summ"
        android:defaultValue="@null"
        android:inputType="textEmailAddress"
        android:dialogTitle="@string/pref_email_title" />
    
</PreferenceScreen>