<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/services_filter_keywords"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/services_filter_keywords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/services_filter_keywords_hint"
        android:inputType="textMultiLine"
        android:lines="2"
        android:singleLine="false" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/services_filter_sources"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/services_filter_sources"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>
    
</LinearLayout>