<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2012-2013 Trento RISE
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
         http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either   express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/messagedetailsmenu_star"
        android:icon="@drawable/actionbar_star_s"
        android:menuCategory="system"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/empty">
        <menu android:id="@+id/placeholder_menu" >
        </menu>
    </item>
    <item
        android:id="@+id/messagedetailsmenu_toggler"
        android:icon="@drawable/abs__ic_menu_moreoverflow_normal_holo_light"
        android:menuCategory="system"
        android:orderInCategory="10"
        android:showAsAction="always"
        android:title="@string/empty">
        <menu android:id="@+id/messagedetailsmenu_submenu" >
            <item
                android:id="@+id/notice_option_toggle_read"
                android:title="@string/notice_option_toggle_read"/>
            <item
                android:id="@+id/notice_option_remove"
                android:title="@string/notice_option_remove"/>
            <item
                android:id="@+id/notice_option_assign_labels"
                android:title="@string/notice_option_assign_labels"/>
<!--             <item -->
<!--                 android:id="@+id/notice_option_view_funnel" -->
<!--                 android:title="@string/notice_option_view_funnel"/> -->
        </menu>
    </item>

</menu>
