<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2012-2013 Trento RISE
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
         http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either   express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sc_light_gray"
    android:divider="@android:color/transparent"
    android:dividerHeight="20dp"
    android:fillViewport="true" >

    <LinearLayout
        android:id="@+id/channel_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/channel_name"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/sc_dark_gray" />

        <EditText
            android:id="@+id/channel_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/channel_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/channel_source"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/sc_dark_gray" />

        <Spinner
            android:id="@+id/channel_sourcetype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/channel_keywords"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/channel_keywords_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/channel_keywords_hint"
            android:inputType="textMultiLine"
            android:lines="2"
            android:singleLine="false" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/channel_labels"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/sc_dark_gray" />

            <ImageButton
                android:id="@+id/channel_add_labels"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/channel_add"
                android:src="@drawable/add" />
        </TableRow>

        <LinearLayout
            android:id="@+id/channel_labels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="3dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/channel_labels_hint"
            android:textColor="@color/sc_gray"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/channel_destinations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/channel_destinations"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/sc_dark_gray" />

        <ImageButton
            android:id="@+id/channel_add_destinations"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/channel_add"
            android:src="@drawable/add" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/channel_cancel"
                style="@style/Theme.communicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="@android:string/cancel" />

            <Button
                android:id="@+id/channel_ok"
                style="@style/Theme.communicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="@android:string/ok" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
